@@ -70,6 +70,26 @@
                 </code>
            </summary>
             <bugs>
+                <bug id="1634" tool="jira">
+                    <description>
+                        Trivial checkstyle-based corrections
+                    </description>
+                    <contributor>
+                        <name>Edward Kuns</name>
+                        <email>edward.kuns@aspect.com</email>
+                    </contributor>
+                    <submitter>
+                        <name>Edward Kuns</name>
+                        <email>edward.kuns@aspect.com</email>
+                    </submitter>
+                    <reporter>
+                        <name>Edward Kuns</name>
+                        <email>edward.kuns@aspect.com</email>
+                    </reporter>
+                    <type>Bug</type>
+                    <module>All</module>
+                    <date>20061018</date>
+                </bug>
                 <bug id="1631" tool="jira">
                     <description>
 		                Added support for XML schema type 'unsignedByte' to XML code generator.
