@@ -30,7 +30,6 @@ import java.util.StringTokenizer;
 
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
-import org.castor.cache.CacheFactoryRegistry;
 import org.exolab.castor.core.exceptions.CastorRuntimeException;
 
 /**
