@@ -2,6 +2,11 @@
 SVN
 -------------------------------
 
+All:   Resolved issue CASTOR-1634 using contribution from Edward Kuns [edward.kuns@aspect.com]
+       Trivial checkstyle-based corrections
+       Details: http://jira.codehaus.org/browse/CASTOR-1634
+       (Edward - 20061016)
+
 XML:   Resolved issue CASTOR-1631 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
        Added support for XML schema type 'unsignedByte' to XML code generator.
        Details: http://jira.codehaus.org/browse/CASTOR-1631
